Taller 5: Controllers, Swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,14 @@
+#Custom server tomcat
+spring.application.name=servicio-universidades
+server.port=9081
+#server.connection-timeout=5s
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/universidadt
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+server.servlet.context-path=/api/v1/universidad
+
+#spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
